@startuml Logger Class

<style>
note {
  MaximumWidth 350
}
</style>

set namespaceSeparator ::


' --------------------------
' Message Data Structure
' --------------------------

enum LogLevel <<enum>> {
  Important = 0
  Progress = 1
  Detailed = 2
  Trace = 3
  Debug = 4
  DebugTrace = 5

  Silent = -1
}

enum LogMsgType <<enum>> {
  Info
  Warning
  Error
  Stats?
  Iteration?
  ...?
}

struct SourceFileLocation <<struct>> {
  + string m_sourceFile
  + int m_line
}

struct LogMsgCallParams <<struct>> #text:Green {
}
note left: Parameters of the log call.

struct LogMsgGeneralContext <<struct>> #text:DarkCyan {
  + integer m_rank
  + SystemClock m_rankTimeStamp
  + string m_logSectionTitle
  + real64 m_timeStepStart
}
note right: If more efficient, types could be changed to string.

struct LogMsgTargetContext <<struct>> #text:DarkMagenta {
  + string m_targetName
  + string m_targetDataContext
}
note bottom: Pretransformed string values.\nValues can be zero (GeneralLogger)

struct LogMsgContext <<struct>> #text:Blue {
}
note right: Context data collected by the LoggingObject.\nData could be a map<string,string>

struct LogMsg <<struct>> #text:OrangeRed {
  + string m_text
}
note left: Message data structure.

LogMsgCallParams *---> "1" SourceFileLocation
LogMsgCallParams *---> "1" LogMsgType
<> LogMsgCallParamsLogLevels
LogMsgCallParams *-- LogMsgCallParamsLogLevels
LogMsgCallParamsLogLevels --> "1\nm_msgLevel" LogLevel
LogMsgCallParamsLogLevels --> "1\nm_callLevel" LogLevel
LogMsgContext *--> "1" LogMsgCallParams
LogMsgContext *--> "1" LogMsgGeneralContext
LogMsgContext *--> "1" LogMsgTargetContext
LogMsg *--> "1" LogMsgContext

LogMsgCallParams -r[hidden]- LogMsgTargetContext
LogMsgTargetContext -r[hidden]- LogMsgGeneralContext

LogLevel ---r[hidden]- LogMsgType
LogMsgType ---r[hidden]- SourceFileLocation


' --------------------------
' Log outputs
' --------------------------


interface LogOutput <<interface>> #text:DarkRed {
  + void log( <color:OrangeRed>LogMsg message</color> )
}

class LogTextStreamOutput {
  -- Public members --
  + <<Create>>( std::ostream * outStream )
  -- Private members --
  - std::ostream * m_outStream
}
LogOutput <|.d. LogTextStreamOutput  : implements
note bottom: Outputs to an already existing stream (typically, the console output).

class LogTextFileOutput {
  -- Public members --
  + <<Create>>( string rankFilesDir, string fileNameFmt = "Rank{}_log.txt" )
  -- Private members --
  - std::ofstream m_rankFileStream
}
LogOutput <|.d. LogTextFileOutput  : implements
note bottom: Outputs to a text file for this rank.

class LogHDF5Output {
  -- Public members --
  + <<Create>>( string filePath )
  -- Private members --
  - hid_t file_id
  - ...
}
LogOutput <|.d. LogHDF5Output  : implements


class LogErrorHistory {
  -- Settings --
  - integer storeTimeStepsCount = 2
  - bool storeOnlyRank0 = false
  + void setTimeStepToKeep( integer value )
  + void storeOnlyRank0( bool value )
  -- MessageManaging --
  + void submitMessage( LogMsg msg )
  + void flushOldMessages()
  -- Internal data --
  - real64 storedTimeSteps[]
}
note as LogErrorHistoryNote
  Stores all messages, and when an error occurs, dump them all in the rank error trace file.

  Settings should be configurable on Problem & command line.

  "flushOldMessages()" should be called on each timesteps.
end note
LogErrorHistory .. LogErrorHistoryNote
LogErrorHistory o--l--> "0..n" LogMsg #OrangeRed;text:OrangeRed : Stores last timesteps LogMsgs


class LogRouter #text:DarkRed {
  -- Static Members --
  + {static} LogOutput m_main
  -- Settings --
  - LogLevel errorHistoryMaxLevel = Debug
  + void setOutputs( LoggingStrategy strat )
  + void addOutput( LogOutput output )
  + void setErrorHistoryLogLevel( LogLevel errorHistoryMaxLevel )
  -- Message managing --
  + void submitMessage( LogMsg msg )
}
note top: Filters the messages and send them in the LogOutput and / or in the LogErrorHistory
LogRouter *-r-> "0..n\nm_outputs" LogOutput #OrangeRed;text:OrangeRed : "Filter & Sends LogMsg to"
LogRouter *-d-> "1" LogErrorHistory #OrangeRed;text:OrangeRed : "Filter & Sends LogMsg to"


' --------------------------
' Message Producers
' --------------------------


interface LoggingObject<CONTEXT_T> <<interface>> {
  + void setLogLevel( LogLevel objectLevel )
  + void log( <color:Green>LogMsgCallParams msgCtx</color>, <color:OrangeRed>string msg</color>, <color:DarkRed>LogRouter router = <u>LogRouter::m_main</u></color> )
  + void logIf( <color:Green>LogMsgCallParams msgCtx</color>, <color:OrangeRed>string msg</color>, <color:DarkRed>LogRouter router = <u>LogRouter::m_main</u></color> )
  + void logRank0( <color:Green>LogMsgCallParams msgCtx</color>, <color:OrangeRed>string msg</color>, <color:DarkRed>LogRouter router = <u>LogRouter::m_main</u></color> )
  + void logRank0If( <color:Green>LogMsgCallParams msgCtx</color>, <color:OrangeRed>string msg</color>, <color:DarkRed>LogRouter router = <u>LogRouter::m_main</u></color> )
  # <color:Blue>LogMsgContext</color> createMsgContext( <color:Green>LogMsgCallParams msgParams</color> )
  # <i>CONTEXT_T</i> getContext()
}
note right: Interface for producer of LogMsg structures.\n\nDefaultValue for logOutput is the main LogCompositeOutput.\n\nIf there can be more that one Problem (-> more than one GeneralLogger),\nWe should add one more parameter, the GeneralLogger (with a default instance).


class GeneralLogger {
  -- Global Variables --
  + {static} GeneralLogger logger
  -- Context / Logging Data --
  - LogLevel m_generalLogLevel
  - int m_rank
  - int m_ranksCount
  - real64 m_timeStepStart
  - string m_logSectionTitle
  - <color:DarkCyan>LogMsgGeneralContext currentContext</color>
  -- Context Update Methods --
  + void setRank( int value )
  + void setRanksCount( int value )
  + void setTimeStepStart( real64 value )
  + void setLogSectionTitle( string value )
}
note as GeneralLoggerNote
  "logger" is a global instance for general messages (this global is allowed as long as "Problem" is a singleton).

  "m_generalLogLevel" should be configurable on Problem and in a command line parameter.
end note
GeneralLogger .d. GeneralLoggerNote
GeneralLogger [<i>CONTEXT_T</i> =\n<color:DarkCyan>LogMessageGeneralContext</color>] ..u..|> LoggingObject : implements
GeneralLogger .d..> LogMsg : Produces
GeneralLogger .r..> LogRouter #OrangeRed;text:OrangeRed : "Sends LogMsg to"


class TargetedLogger {
  -- Context / Logging Data --
  - LogLevel m_logLevel
  - <color:DarkMagenta>LogMsgTargetContext currentContext</color>
  -- Context Update Methods --
  + void setTargetName( int value )
  + void setTargetDataContext( int value )
}
package dataRepository {
  class Group {
    + <color:Grey>string getName()</color>
    + <color:Grey>string getDataContext()</color>
    - <color:Red><s>int m_logLevel</s></color>
  }
}
TargetedLogger [<i>CONTEXT_T</i> =\n<color:DarkMagenta>LogMsgTargetContext</color>] ..u..|> LoggingObject : implements
TargetedLogger "1\nm_logger" <-d-* Group
TargetedLogger .r..> LogRouter #OrangeRed;text:OrangeRed : "Sends LogMsg to"
TargetedLogger .r..> GeneralLogger #Blue;text:Blue : "Sub-calls logger.ceateMsgContext()"
TargetedLogger .d..> LogMsg : Produces


@enduml